# oop_homeworks

./: CMakeLists.txt
hw10/: CMakeLists.txt  main.cpp
hw11/: CMakeLists.txt  main1.cpp  main2.cpp
hw12/: main1.cpp
hw13/: main1.cpp
hw14/: main1.cpp  main2.cpp
hw2/: CMakeLists.txt  main.cpp
hw3/: CMakeLists.txt  main.cpp
hw4/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  main.cpp  mytime.h
hw5/test/: CMakeLists.txt  test.cpp
hw6/: CMakeLists.txt  main.cpp
hw7/: main.cpp  main2.cpp
hw8/: CMakeLists.txt  main.cpp
hw9/: CMakeLists.txt  main1.cpp  main2.cpp
lec4/: subt1.cpp
tsk0/: main.cpp  module1.cpp  module1.hpp  module2.cpp  module2.hpp  module3.cpp  module3.hpp
tsk0b/: data.csv  data1.csv  main.cpp  main0b.hpp  some_text.txt
